# wordlimate

./: .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml  pytest.ini
.github/workflows/: main.yml
docs/: classes.nomnoml  sequence.diag
src/wordlimate/: __init__.py  models.py
tests/: test_wordlimate.py
